# Senior-Design-2023

./: .gitmodules  CMakeLists.txt  README.md  package.xml
docs/: jetson-setup.md
include/senior_design_504/: CarModelLocal.hpp
nav_planner/: CMakeLists.txt
nav_planner/include/senior_design_504/: CarModelGlobal.hpp  CarModelLocal.hpp  NavigationUtil.hpp  map_slice_util.hpp  sd_util.hpp
nav_planner/src/: planner_node.cpp
sd504/: CMakeLists.txt  Dockerfile.sd504  package.xml
sd504/config/: gui.rviz  nvblox.yaml  realsense.yaml
sd504/launch/: sd504.launch.py
sd504_arduino/: sd504_arduino.ino
sd504_motor_controller/: package.xml  setup.cfg  setup.py
sd504_motor_controller/sd504_motor_controller/: motor_controller_node.py
sd504_nav_planner/: CMakeLists.txt  package.xml
sd504_nav_planner/include/sd504_nav_planner/: CarModelGlobal.hpp  CarModelLocal.hpp  NavigationPlanner.hpp  NavigationUtil.hpp  PlannerNode.hpp  SD504Model.hpp
sd504_nav_planner/src/: goal_publisher_node.cpp  planner_node.cpp
sd504_teensy/: sd504_teensy.ino
src/: planner_node.cpp
