<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>senior_design_504</name>
  <version>1.0.0</version>
  <description>Package for Team 504 Senior Design Project</description>
  <maintainer email="jboylan@fsu.edu">Jonathan Boylan</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>nvblox_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
