<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sd504_motor_controller</name>
  <version>1.0.0</version>
  <description>Team 504 Senior Design Motor Controller Package</description>
  <maintainer email="jboylan@fsu.edu">Jonathan T. Boylan</maintainer>
  <license>BSD</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
